# Partner-Adda-OBS

./: .gitattributes  AddaPartnerComplete_Setup.iss  AddaPartnerLauncher.cpp
.github/scripts/: .Wingetfile
.github/workflows/: build-windows-plugin.yml
cmake/common/: bootstrap.cmake
cmake/macos/: helpers.cmake
cmake/macos/resources/: AppIcon.icns  package.applescript
frontend/data/locale/: en-US.ini
frontend/plugins/: CMakeLists.txt
frontend/plugins/obs-qr-stream-key/: CMakeLists.txt  adda-login-client.cpp  adda-login-client.hpp  network-util.cpp  network-util.hpp  qr-choice-dialog.cpp  qr-choice-dialog.hpp  qr-choice-dialog.ui  qr-pairing-dialog.cpp  qr-pairing-dialog.hpp  qr-pairing-dialog.ui  qr-pairing-main.cpp  qr-pairing-plugin.cpp  qr-pairing-plugin.hpp  qr-pairing-server.cpp  qr-pairing-server.hpp  qr-relay-client.cpp  qr-relay-client.hpp  qrcode-util.cpp  qrcode-util.hpp
frontend/plugins/obs-qr-stream-key/data/locale/: en-US.ini
frontend/widgets/: OBSBasic_SysTray.cpp
plugins/: CMakeLists.txt
plugins/obs-qr-stream-key/: CMakeLists.txt  QUICKSTART.md  README.md  SETUP.md  adda-login-client.cpp  adda-login-client.hpp  auth-selection-dialog.cpp  auth-selection-dialog.hpp  build-and-test.sh  download-httplib.bat  download-httplib.sh  obs-qr-stream-key.cpp  qr-dialog.cpp  qr-dialog.hpp  qr-relay-client.cpp  qr-relay-client.hpp  qrcodegen.hpp
plugins/obs-qr-stream-key/data/locale/: en-US.ini
